fancy file upload buttons

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -17,13 +17,19 @@
         <div id="picture_title_l">
         <%= f.label :photo_1, 'Picture 1'%>
           <div id="browse_l">
-            <%= f.file_field :photo_1, :class => 'photo_set_photo_file_field'  %>
+            <span class="file-wrapper">
+              <input type="file" name="photo_set[photo_1]" id="photo_set_photo_1" class="photo_set_photo_file_field" />
+              <span class="button">Choose a Photo</span>
+            </span>
           </div>
         </div>
           <div id="picture_title_r">
             <%= f.label :photo_2, 'Picture 2' %><br />
             <div id="browse_r">
-            <%= f.file_field :photo_2, :class => 'photo_set_photo_file_field' %>
+              <span class="file-wrapper">
+                <input type="file" name="photo_set[photo_2]" id="photo_set_photo_2" class="photo_set_photo_file_field" />
+                <span class="button">Choose a Photo</span>
+              </span>
             </div>
           </div>
       </div><!--#frame -->
@@ -43,8 +49,8 @@
           <div id='submit_plain'> By clicking submit you agree to the <a id='submit_link' href=/termsandconditions> terms & conditions.</a>
           </div>
         </div>
-      
-      
+
+
     <% end %>
 
 	</div><!-- #wrapper-st -->
