--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -41,14 +41,16 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #picture_title_r {width: 160px; height: 70px; float:right; margin: 28px 13px 10px 0px; padding: 50px 0px 0px 0px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
 #instructions {float:left; margin: 30px 0px 0px 25px;}
 #instructions li {display:block; color:#b4b5b7; font:12px century gothic,sans-serif;}
-#descriptions {margin:170px 15px 0px 345px;color:#b4b5b7; font:13px century gothic,sans-serif; padding: 0px 0px 40px 0px;}
+#descriptions {margin:170px 15px 0px 345px; padding: 0px 0px 40px 0px;}
 #description_st_l {float:left; margin:0px 0px 0px 0px; color:#b4b5b7; font:13px century gothic,sans-serif; text-align:left;}
 #description_st_r {float:right; margin:0px 0px 0px 0px; color:#b4b5b7; font:13px century gothic,sans-serif; text-align:right;}
 #submit {margin:20px 0px 0px 337px; padding: 10px 0px 30px 0px;color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: none; text-align:center}
 #submit_plain {color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: none; padding: 10px 0px 0px 0px;}
 #submit_link {color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: underline;}
+#photo_set_your_title {color:#b4b5b7; font:12px century gothic,sans-serif; text-align:left; border-style:none;}
+#photo_set_your_name {color:#b4b5b7; font:12px century gothic,sans-serif; text-align:right; border-style:none;}
 input[type="submit"] {background:url(../images/submit_button.png);}
-input[type="text"] {width:121px; height:12px; border-width:1px; border-color:#b4b5b7; border-style:solid; margin:5px 0px 3px 0px;}
+input[type="text"] {width:121px; height:12px; border-width:1px; border-color:#b4b5b7; border-style:solid; margin:5px 0px 3px 0px; }
 
 /* file uploads */
 
