--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Portwist</title>
-  <%= stylesheet_link_tag 'reset', 'application' %>
-  <%= javascript_include_tag 'jquery', 'application' %>
+  <%= stylesheet_link_tag 'reset', 'fancybox', 'application' %>
+  <%= javascript_include_tag 'jquery', 'fancybox', 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body id="<%= body_id %>">    
