--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -46,7 +46,7 @@
         <div id="submit">
           <%= f.submit "", :type => :image, :src => "/images/submit_button.png" %>
           </br>
-          <div id='submit_plain'> By clicking submit you agree to the <a id='submit_link' href=/termsandconditions> terms & conditions.</a>
+          <div id='submit_plain'> By clicking submit you agree to the <a id='submit_link' href="/terms"> terms & conditions.</a>
           </div>
         </div>
 
