--- a/app/views/root/howto.html.erb
+++ b/app/views/root/howto.html.erb
@@ -18,30 +18,8 @@
         Take a pic of yourself with the front facing camera.
         <br>
         Flip the camera and take a pic of your surroundings.</li>
-      <li><a id="submit_text" <a href="popups.html">Click Here</a></li>
+      <li><%= link_to 'Click here', terms_url, :id => 'submit_text', :class => 'fancybox fancybox.ajax' %></li>
     </ul>
   </div><!--#right_side -->
 </div><!--#wrapper -->
 
-<!--#this code is for the pop up that will appear on click of terms and conditions -->
-<div id='wrapper_tandc'>
-	<div id="p1_tandc">
-	  TERMS AND CONDITIONS
-  </div><!-- #p1_tandc -->
-	  <div id="p2_tandc">
-  	  If you submit pictures I might use them for my portfolio, or a book, or on some other site.
-      </br>
-      I’m not an asshole.  I won’t do anything weird with your pictures.
-      </br>
-      But I think I’m obligated to tell you
-      </br>
-      this stuff might show up somewhere else (but probably not).
-      </br>
-      Let’s just all be good people and move on.
-      </br>
-      If you want to yell at us about it <a id='submit_text' href="www.portwist.com/contact">click here.</a>
-    </div><!-- #p2_tandc -->
-    	<div id="tryagain">
-    	  <a href="/"><img src="images/bye_btn.png"></a>
-      </div><!--#tryagain -->
-</div><!--#wrapper_tandc -->
