--- a/app/views/root/terms.html.erb
+++ b/app/views/root/terms.html.erb
@@ -13,6 +13,6 @@
       </br>
       Let’s just all be good people and move on.
       </br>
-      If you want to yell at us about it <a id='submit_text' href="/contact">click here.</a>
+      If you want to yell at us about it <a id='submit_text' href="mailto:mmearshe@gmail.com">click here.</a>
     </div><!-- #p2_tandc -->
 </div><!--#wrapper_touteandc -->
