--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,8 +16,8 @@
 #photos {height:163px; text-align: center; background-position: top; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; text-align: center; margin: 30px 0px 50px 0px;}
 #description {margin: 15px 0px 0px 0px;}
 #description li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
-#description_l {float:left; padding: 0px 0px 0px 180px;}
-#description_r {float: right; padding: 0px 180px 0px 0px;}
+#description_l {float:left; padding: 0px 0px 0px 180px; width:120px; overflow: auto; text-align:left; border-style:solid; border-color:red; border-width:1px;}
+#description_r {float: right; padding: 0px 80px 0px 0px; width:120px; overflow: auto; text-align:right; border-style:solid; border-color:red; border-width:1px;}
 .user_left {margin: 28px 12px 0px 0px;}
 .user_right {margin: 28px 1px 0px 0px;}
 
