fixed size of background on home page. Still need to adjust submitted photo size. but submission not working. Also made the two seperate line types.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class="clear"> </div>
     <div id="logo">
       <a href="/"><img src="images/logo.png"></a>
-      <hr id="line">
+      <hr id="line_1">
     </div><!-- #logo -->
 
 <%= yield %>    
