--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,7 +3,8 @@
 #nav_r {float:right;}
 #nav_l {position: absolute; top: 53px;left: 0px; z-index:4;}
 #logo {text-align: center; margin: 90px auto 0px auto; width:700px; padding: 0px 30px;}
-#line {height:1px; width:600px; color:#b4b5b7; background:#b4b5b7; border:none; margin:50px auto 0px auto;}
+#line_1 {height:1px; width:600px; color:#b4b5b7; background:#b4b5b7; border:none; margin:50px auto 0px auto;}
+#line_2 {height:1px; width:600px; color:#b4b5b7; background:#b4b5b7; border:none; margin:50px auto 30px auto;}
 #twitter {position: absolute; top: 14px; right: 38px;}
 #tabs #tab-home {position: absolute; top: 52px;left: -2px; z-index:3;}
 #tabs #tab-submit {position: absolute; top: 52px;left: 127px; z-index:2;}
@@ -13,13 +14,13 @@
 
 /*This is the code for index*/
 #content {width:700px; margin: 0px auto 0px auto; padding: 0px 30px;}
-#photos {height:163px; text-align: center; background-position: top; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; text-align: center; margin: 30px 0px 50px 0px;}
-#description {margin: 15px 0px 0px 0px;}
+#photos {height:275px; text-align: center; background-position: top; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; text-align: center; margin: 30px 0px 50px 0px;}
+#description {margin: 35px 0px 0px 0px;}
 #description li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
-#description_l {float:left; margin: 0px 0px 0px 180px; width:160px; overflow: auto; text-align:left;}
-#description_r {float:right; margin: 0px 180px 0px 0px; width:160px; overflow: auto; text-align:right;}
-.user_left {margin: 28px 12px 0px 0px;}
-.user_right {margin: 28px 2px 0px 0px;}
+#description_l {float:left; margin: 0px 0px 0px 62px; width:160px; overflow: auto; text-align:left;}
+#description_r {float:right; margin: 0px 62px 0px 0px; width:160px; overflow: auto; text-align:right;}
+.user_left {margin: 49px 18px 0px 0px;}
+.user_right {margin: 49px 2px 0px 10px;}
 
 /*This is the code for how-to*/
 p.left {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7; }
@@ -36,7 +37,7 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 
 /*This is the code for submit*/
 #wrapper_st {width:700px; margin:15px auto 0px auto; padding:0px 30px;} 
-#frame {height:162px; width:366px; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; float: right;}
+#frame {height:162px; width:366px; background-image:url("../images/camera_background_small.png"); background-repeat:no-repeat; float: right;}
 #picture_title_l {width:160px; height: 70px; float: left; margin: 28px 0px 10px 12px; padding: 50px 0px 0px 0px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
 #picture_title_r {width: 160px; height: 70px; float:right; margin: 28px 13px 10px 0px; padding: 50px 0px 0px 0px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
 #instructions {float:left; margin: 30px 0px 0px 25px;}
@@ -51,6 +52,7 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 	float:left;  
 	color:#b4b5b7; 
 	font:13px century gothic,sans-serif;
+	padding: 0px 0px 0px 0px;
 		}
 
 .descriptions_r {
