added hover and active to buttons, still want to change color. Probably just ad _active to the class when active.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
         <img src="images/header_spike_right.png">
       </div><!-- #nav_r -->
         <div id="tabs">
-          <a id="tab-home" href="/"><img src="images/home_btn.png" alt="Home"></a>
-          <a id="tab-submit" href="/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
-          <a id="tab-how-to" href="/howto"><img src="images/howto_btn.png" alt="How To"></li></a>
+          <a id="tab-home" href="/"></a>
+          <a id="tab-submit" href="/submit"></a>
+          <a id="tab-how-to" href="/howto"></a>
         </div><!-- #tabs -->
       <div class="clear"> </div>
     <div id="logo">
