fixed the width and height of the input boxes on the submission page. need to confirm character limit si correct.

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -35,10 +35,10 @@
       </div><!--#frame -->
         <div class='descriptions'>
           <div class="descriptions_r">
-            <%= f.text_field :your_name, :placeholder => '(YOUR NAME)', :maxlength => 17 %>
+            <%= f.text_field :your_name, :placeholder => '(YOUR NAME)', :maxlength => 21 %>
           </div>
           <div class="descriptions_l">
-            <%= f.text_field :your_title, :placeholder => '(YOUR TITLE)', :maxlength => 17, :size => 30 %>
+            <%= f.text_field :your_title, :placeholder => '(YOUR TITLE)', :maxlength => 21 %>
           </div>
         </div><!--#descriptions -->
         <div id="submit">
