fixed active button images. need to finish

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Portwist</title>
   <%= stylesheet_link_tag 'reset', 'admin' %>
-  <%= javascript_include_tag 'jquery', 'fancybox', 'placeholder_fix', 'application' %>
+  <%= javascript_include_tag 'jquery', 'admin' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
