--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div id="nav_r">
         <img src="images/header_spike_right.png">
       </div><!-- #nav_r -->
-        <div id="tabs">
+        <div id="tabs" class='<%= "tab-#{body_id}" %>'>
           <a id="tab-home" href="/"></a>
           <a id="tab-submit" href="/submit"></a>
           <a id="tab-how-to" href="/howto"></a>
