fixed active page buttons. need to fix the way they look

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -114,10 +114,6 @@
     box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.2);
 	}
 
-.tab-root-submit #tab-submit {
-	background-image:url("../images/submit_btn_active.png");
-}
-
 #tab-how-to {
 	position: absolute; 
 	top: 52px; 
@@ -154,8 +150,19 @@
 	    box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.2);
 	}
 
-#tab-current{
-	
+.tab-root-index #tab-home {
+	background-image:url("../images/home_btn_active.png");
+}
+
+.tab-root-submit #tab-submit {
+	background-image:url("../images/submit_btn_active.png");
+}
+
+.tab-root-howto #tab-how-to {
+	background-image:url("../images/howto_btn_active.png");
+}
+
+#tab-current{	
 }
 
 .clear {
